--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,11 @@
     <artifactId>mvstore</artifactId>
     <packaging>jar</packaging>
     <name>MVStore</name>
-    <version>${core.artifact.version}-${core.artifact.release}</version>
+    <version>2.3.232-r2</version>
 
     <properties>
         <!-- change release here-->
         <core.artifact.version>2.3.232</core.artifact.version>
-        <core.artifact.release>r1</core.artifact.release>
 
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
         <maven.moditect.plugin>1.0.0.RC2</maven.moditect.plugin>
