--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>mvstore</artifactId>
     <packaging>jar</packaging>
     <name>MVStore</name>
-    <version>2.3.232-r3-SNAPSHOT</version>
+    <version>2.3.232-r3-AR-299_Java23-SNAPSHOT</version>
 
     <properties>
         <!-- change release here-->
