--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <properties>
         <!-- change release here-->
         <core.artifact.version>2.3.232</core.artifact.version>
-        <core.artifact.release></core.artifact.release>
+        <core.artifact.release>r4</core.artifact.release>
 
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
         <maven.moditect.plugin>1.0.0.RC2</maven.moditect.plugin>
